<resources>
    <string name="app_name">GithubRepoDetails</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="landing_title">Github Browser</string>
    <string name="add_repo">Add Repository</string>
    <string name="track_fav_repo">Track your favourite repo</string>
    <string name="add_repo_now">ADD NOW</string>
    <string name="add_repo_title">Add Repo</string>
    <string name="add">ADD</string>
    <string name="owner_org">Owner/Organization</string>
    <string name="repo_name">Repo Name</string>
    <string name="delete_repo">Delete Repo</string>
    <string name="view_repo_in_browser">View in browser</string>
    <string name="details_title">Details</string>
    <string name="branches">BRANCHES</string>
    <string name="issues">ISSUES</string>
    <string name="commits_title">Commits</string>
</resources>