<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.LandingScreenFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBarLandRepo"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/landing_title"
            app:menu="@menu/landing_menu"
            style="@style/Widget.MaterialComponents.Toolbar.Primary" />


    </com.google.android.material.appbar.AppBarLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:visibility="gone"
        android:layout_marginHorizontal="16dp"
        tools:listitem="@layout/landing_repo_item"
        android:layout_marginTop="8dp"
        android:id="@+id/listOfReposRV"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <LinearLayout
        android:visibility="visible"
        android:id="@+id/ifEmptyLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:maxLines="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/track_fav_repo"
            />
        <Button
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:id="@+id/addNowButton"
            android:padding="16dp"
            android:textSize="24sp"
            app:strokeColor="@color/black"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_repo_now"
            style="?attr/materialButtonOutlinedStyle"
            />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>