<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AddRepoDialogFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:contentInsetStartWithNavigation="0dp"
            app:navigationIcon="@drawable/ic_sharp_arrow_back_ios_new_24"
            app:title="@string/add_repo_title"
            style="@style/Widget.MaterialComponents.Toolbar.Primary" />
    </com.google.android.material.appbar.AppBarLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="32dp"
                android:layout_marginHorizontal="24dp"
                app:layout_constraintTop_toBottomOf="@id/topAppBarLayout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:padding="8dp"
                android:text="@string/owner_org"/>
            <EditText
                android:maxLines="1"
                android:id="@+id/ownerRepoET"
                android:layout_marginVertical="8dp"
                android:padding="8dp"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:background="@drawable/edit_text_border"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                />

                <TextView
                    android:layout_marginTop="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textColor="@color/black"
                    android:padding="8dp"
                    android:text="@string/repo_name"/>
                <EditText
                    android:maxLines="1"
                    android:id="@+id/repoNameET"
                    android:layout_marginVertical="8dp"
                    android:padding="8dp"
                    android:textSize="24sp"
                    android:textColor="@color/black"
                    android:background="@drawable/edit_text_border"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    />

            </LinearLayout>
            <Button
                android:layout_marginHorizontal="1dp"
                android:textAlignment="center"
                android:layout_marginBottom="0dp"
                style="?attr/materialButtonOutlinedStyle"
                app:strokeColor="@color/black"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:id="@+id/addRepoButton"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:textSize="24sp"
                android:layout_height="wrap_content"
                android:text="@string/add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />
</androidx.constraintlayout.widget.ConstraintLayout>